2008-02-29  Fabian Affolter <fab@fedoraproject.org>

	* po/de.po: Updated translation.

2008-02-28  Piotr Drąg <piotrdrag@gmail.com>

	* po/pl.po: Updated translation.

2008-02-26  Tomas Mraz <t8m@centrum.cz>

	* po/LINUGAS: New languages added.
	* po/es.po: Updated translations.
	* po/fr.po: Likewise.
	* po/it.po: Likewise.
	* po/ja.po: Likewise.
	* po/nl.po: Likewise.
	* po/pl.po: Likewise.
	* po/pt_BR.po: Likewise.
	* po/ru.po: Likewise.
	* po/zh_CN.po: Likewise.
	* po/as.po: New file.
	* po/gu.po: Likewise.
	* po/hi.po: Likewise.
	* po/kn.po: Likewise.
	* po/ko.po: Likewise.
	* po/ml.po: Likewise.
	* po/or.po: Likewise.
	* po/si.po: Likewise.
	* po/ta.po: Likewise.

2008-02-21  Tomas Mraz <t8m@centrum.cz>

	* libpam/pam_audit.c (_pam_audit_writelog): Silence syslog
	message on non-error return.

	* modules/pam_unix/unix_chkpwd.c (main): Proceed as unprivileged
	user when checking password of another user.
	* modules/pam_unix/unix_update.c: Fix comment.

2008-02-18  Dmitry V. Levin  <ldv@altlinux.org>

	* libpam/pam_handlers.c (_pam_assemble_line): Fix potential
	buffer overflow.
	* xtests/tst-pam_assemble_line1.pamd: New test for
	_pam_assemble_line.
	* xtests/tst-pam_assemble_line1.sh: New script for
	tst-pam_assemble_line1.
	* xtests/Makefile.am (NOSRCTESTS): Add tst-pam_assemble_line1.
	(EXTRA_DIST): Add tst-pam_assemble_line1.pamd and
	tst-pam_assemble_line1.sh

	* modules/pam_exec/pam_exec.c (call_exec): Fix asprintf return
	code check.

2008-02-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.10.0

	* configure.in: set version number.

	* modules/pam_rhosts/Makefile.am: Remove pam_rhosts_auth.
	* modules/pam_rhosts/pam_rhosts_auth.c: Removed.
	* modules/pam_rhosts/tst-pam_rhosts_auth: Removed.

	* modules/pam_namespace/Makefile.am (noinst_HEADERS): Add
	pam_namespace.h.

2008-02-13  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_namespace/Makefile.am: Add argv_parse files and namespace.d
	dir.
	* modules/pam_namespace/argv_parse.c: New file.